# googleEarthApiTrace

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.gradle  runFullProcess.sh  settings.gradle
.claude/: settings.local.json
01_tracer/: CMakeLists.txt  README.md
01_tracer/cmake/: GenerateVersion.cmake
01_tracer/dispatch/: glproc.py
01_tracer/helpers/: CMakeLists.txt
01_tracer/lib/trace/: CMakeLists.txt  trace_writer.cpp
01_tracer/wrappers/: glxtrace.py
02_traceLogSplitter/src/: splitter.cpp
11_pathPlanner/: README.md  run.sh
11_pathPlanner/.gradle-user-home/caches/journal-1/: file-access.properties
11_pathPlanner/src/main/java/pathplanner/: CurveGenerator.java  Geodesy.java  KmzPersistance.java  Main.java  Point.java  PointFollower.java  SpiralGenerator.java  ZigzagGenerator.java
11_pathPlanner/src/main/java/pathplanner/generators/: AltitudeGenerator.java  CurveGenerator.java  GlobeGenerator.java  SpiralGenerator.java  ZeroLongitudeSeamGenerator.java  ZigzagGenerator.java
11_pathPlanner/src/main/java/pathplanner/io/: KmlPersistence.java
11_pathPlanner/src/main/java/pathplanner/model/: Point.java
11_pathPlanner/src/main/java/pathplanner/processing/: Geodesy.java  PointFollower.java
12_fileSystemChangesDetector/: CMakeLists.txt  README.md  run.sh
12_fileSystemChangesDetector/src/main/: main.cpp
13_googleEarthController/: README.md  build.gradle  run.sh  settings.gradle
13_googleEarthController/src/main/java/: DetectorProcessClient.java  GoogleEarthController.java  GoogleEarthUi.java  KmlTurtlePlacemarkCounter.java  QtAccessService.java  X11AccessService.java
14_sessionController/: README.md  run.sh  session_controller.py
21_dumpAnalyzer/: README.md  build.gradle  runOffline.sh
21_dumpAnalyzer/src/main/java/dumpanalyzer/: Main.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/config/: Configuration.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/io/: FrameScanner.java  FrameWriter.java  TexturePathScanner.java  TracedModelReader.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/model/: DumpAnalyzerModel.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/options/: CommandLineOptions.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/processing/: NeighborsProcessor.java
21_dumpAnalyzer/src/main/java/dumpanalyzer/render/: Jogl4AxisAlignedBoundingBoxRenderer.java  Jogl4DumpAnalyzerRenderer.java
21_traceLogSplitter/: CMakeLists.txt  README.md
22_dumpAnalyzer/: .gitignore  README.md  build.gradle  run.sh  runOffline.sh
22_dumpAnalyzer/src/main/java/dumpanalyzer/: DumpAnalyzerApplication.java  InteractiveDebugger.java  Main.java
22_dumpAnalyzer/src/main/java/dumpanalyzer/config/: Configuration.java
22_dumpAnalyzer/src/main/java/dumpanalyzer/gui/: KeyboardInteractionTechnique.java  MouseInteractionTechnique.java
22_dumpAnalyzer/src/main/java/dumpanalyzer/io/: FrameFolderScanner.java  FrameJsonWriter.java  FrameTexturePathResolver.java  FrameWriter.java  TexturePathScanner.java  TraceSessionFrameImporter.java  TracedModelReader.java
22_dumpAnalyzer/src/main/java/dumpanalyzer/logger/: ConcurrentMessages.java
22_dumpAnalyzer/src/main/resources/: application.properties
22_frameTextureNormalizer/: README.md  build.gradle  run.sh
22_frameTextureNormalizer/src/main/java/pyramidalimagebuilder/: Main.java
23_frameTextureNormalizer/: README.md  build.gradle  run.sh
23_frameTextureNormalizer/src/main/java/frametexturenormalizer/: FrameNormalizationPipeline.java  FrameTextureNormalizerApplication.java  InteractiveDebugger.java  Main.java  NormalizationPipeline.java
23_frameTextureNormalizer/src/main/java/pyramidalimagebuilder/: InteractiveDebugger.java  Main.java
31_frameTextureNormalizer/src/main/java/pyramidalimagebuilder/: Main.java
31_matrixMerger/: README.md  build.gradle  run.sh  runOffline.sh  settings.gradle
31_matrixMerger/src/main/java/matrixmerger/: InteractiveDebugger.java  Main.java  MatrixMergerApplication.java
31_pyramidalImageBuilder/src/main/java/pyramidalimagebuilder/: Main.java
32_pyramidalImageExporter/: README.md  build.gradle  run.sh  runOffline.sh  settings.gradle
32_pyramidalImageExporter/src/main/java/pyramidalimageexporter/: InteractiveDebugger.java  Main.java  PyramidalImageExporterApplication.java
32_pyramidalImageExporter/src/main/resources/: application.properties
41_planetViewer/: README.md  build.gradle  run.sh
41_planetViewer/src/main/java/planetviewer/: InteractiveViewer.java  Main.java
41_planetViewer/src/main/resources/: application.properties
42_pyramidalImageMerger/: README.md  build.gradle  run.sh  runOffline.sh
42_pyramidalImageMerger/src/main/java/planetviewer/: InteractiveViewer.java  Main.java
43_pyramidalImageCoverage/: README.md  build.gradle  run.sh  settings.gradle
43_pyramidalImageCoverage/src/main/java/pyramidalimagecoverage/: Main.java
dispatch/: CMakeLists.txt
doc/: README.md  downloadFlowProtocol.md
dumpAnalyzer/: README.md  build.gradle  settings.gradle
dumpAnalyzer/src/java/: DumpAnalyzerModel.java  Frame.java  FrameScanner.java  FunctionCounter.java  GlTraceProcessor.java  Jogl4DumpAnalyzerRenderer.java  Jogl4HudRenderer.java  KeyboardInteractionTechnique.java  LogicalLineNormalizer.java  Main.java  TexturePathScanner.java  TileInstance.java
dumpAnalyzer/src/main/antlr/: GlTrace.g4
dumpAnalyzer/src/main/java/dumpanalyzer/: FatalErrorHandler.java  FrameScanner.java  FrameTask.java  Main.java  TexturePathScanner.java  Vector3DMixin.java
lib/: CMakeLists.txt
lib/trace/: trace_writer.cpp  trace_writer.hpp  trace_writer_local.hpp
pathPlanner/: build.gradle  run.sh  settings.gradle
pyramidalImageBuilder/: settings.gradle
pyramidalImageBuilder/src/main/java/pyramidalimagebuilder/: Main.java
scripts/: analizer.cpp  buildAll.sh  cleanAll.sh  countLines.sh  detect_yellow_line.py  splitter.cpp
tracer/: CMakeLists.txt  README.md
tracer/cmake/: GenerateVersion.cmake
tracer/lib/trace/: trace_writer.cpp
tracer/wrappers/: CMakeLists.txt
wrappers/: gltrace.py  glxtrace.py
(+422 files in other folders)
